; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_vfscanf.c_vfscanf_l.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_vfscanf.c_vfscanf_l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vfscanf_l(i32* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @FIX_LOCALE(i32 %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @FLOCKFILE_CANCELSAFE(i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @__svfscanf(i32* %14, i32 %15, i8* %16, i32 %17)
  store i32 %18, i32* %9, align 4
  %19 = call i32 (...) @FUNLOCKFILE_CANCELSAFE()
  %20 = load i32, i32* %9, align 4
  ret i32 %20
}

declare dso_local i32 @FIX_LOCALE(i32) #1

declare dso_local i32 @FLOCKFILE_CANCELSAFE(i32*) #1

declare dso_local i32 @__svfscanf(i32*, i32, i8*, i32) #1

declare dso_local i32 @FUNLOCKFILE_CANCELSAFE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
